--- a/params/topics.yaml
+++ b/params/topics.yaml
@@ -1,5 +1,6 @@
 pub: # Published topics
   red_lines_mask: /gimpy/xsec_detection/mask_red_lines/compressed
+  xsec_eval: /gimpy/xsec_detection/xsec_eval/compressed
 
 sub: # Subscribed topics
   camera: /gimpy/camera_node/image/compressed
