finished nav node

--- a/params/topics.yaml
+++ b/params/topics.yaml
@@ -1,7 +1,5 @@
 pub: # Published topics
-  red_lines_mask: /gimpy/xsec_detection/mask_red_lines/compressed
-  xsec_eval: /gimpy/xsec_detection/xsec_eval/compressed
-  xsec_flag: /gimpy/xsec_detection/xsec_flag/bool
+  wheels_cmd: /gimpy/wheels_driver_node/wheels_cmd
 
 sub: # Subscribed topics
-  camera: /gimpy/camera_node/image/compressed
+  pose: /gimpy/velocity_to_pose_node/pose
