--- a/package.xml
+++ b/package.xml
@@ -61,7 +61,10 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
-
+  <build_depend>duckietown_msgs</build_depend>
+  <exec_depend>duckietown_msgs</exec_depend>
+  <build_depend>std_srvs</build_depend>
+  <exec_depend>std_srvs</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
