--- a/params/topics.yaml
+++ b/params/topics.yaml
@@ -5,8 +5,7 @@ pub: # Published topics
   flag: /quack_man/x_sec_navigating
   
   #-- xsec_det
-  red_lines_mask: /xsec_detection/mask_red_lines/compressed # add vehicle name
-  xsec_eval: /xsec_detection/xsec_eval/compressed # add vehicle name
+  red_line: /xsec_detection/red_line/compressed # add vehicle name
   xsec_flag: /quack_man/x_sec
 
 sub: # Subscribed topics
